# SES-V1_AL5D_arm_simulation

./: README.MD
Documentation/: simmulationDocumentation.docx
UML/: classDiagram.pu
src/commandpublisher/: CMakeLists.txt  package.xml
src/commandpublisher/include/: Demo.hpp  SerialMessages.hpp
src/commandpublisher/src/: Demo.cpp  main.cpp
src/cupsimulation/: CMakeLists.txt  package.xml
src/cupsimulation/include/cupsimulation/publisher/: CupStatePublisher.h
src/cupsimulation/include/cupsimulation/subscriber/: CupStateSubscriber.h
src/cupsimulation/src/publisher/: CupStatePublisher.cpp  main.cpp
src/cupsimulation/src/subscriber/: CupStateSubscriber.cpp  main.cpp
src/lynxarmsimulation/: CMakeLists.txt  package.xml
src/lynxarmsimulation/include/: ArmStatePublisher.h  Configuration.hpp
src/lynxarmsimulation/launch/: lynxarmsimulation_launch.py
src/lynxarmsimulation/rviz/: lynxarmsimulation.rviz
src/lynxarmsimulation/src/: ArmStatePublisher.cpp  main.cpp
src/lynxarmsimulation/urdf/: combined_robot_and_cup.urdf  combined_robot_and_cup.urdf.xacro  cup.urdf
