cmake_minimum_required(VERSION 3.8)
project(lynxarmsimulation)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(urdf REQUIRED)
find_package(rviz_common REQUIRED)

# Add executable
add_executable( ArmStatePublisher
                src/ArmStatePublisher.cpp 
                src/main.cpp)


ament_target_dependencies(ArmStatePublisher 
                          rclcpp 
                          geometry_msgs 
                          sensor_msgs 
                          tf2_ros 
                          urdf)


#add_executable(StatePublisher src/StatePublisher.cpp)
#ament_target_dependencies(StatePublisher rclcpp geometry_msgs sensor_msgs tf2 tf2_ros urdf)

include_directories(include)

# Install executable
install(TARGETS ArmStatePublisher 
        DESTINATION lib/${PROJECT_NAME})


install(DIRECTORY launch urdf rviz
    DESTINATION share/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
